# claude_in_the_shell_v2

./: .env.example  .gitignore  CLAUDE.md  README.md  claude-progress.txt  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: horizon-worker.md
.claude/commands/: all_tools.md  build.md  build_in_parallel.md  find_and_summarize.md  horizon-features.md  horizon-status.md  load_ai_docs.md  load_bundle.md  orch_one_shot_agent.md  orch_plan_w_scouts_build_review.md  orch_scout_and_build.md  parallel_subagents.md  plan.md  plan_w_scouters.md  prime.md  prime_3.md  prime_cc.md  question.md  quick-plan.md  t_metaprompt_workflow.md
.claude/hooks/: session_start.py  (+1 more)
ai_docs/: REFERENCE.md  claude-agent-sdk.md  code-standards.md  dev-commands.md  mcp-tools.md  reachy-sdk.md  simulation.md
app_docs/: find_and_summarize_default.yaml
config/: default.yaml  permissions.yaml
docs/: VALIDATION.md  getting-started.md  index.md  quick-start.md
examples/: sim_basic.py  sim_domain_rand.py  sim_recording.py  sim_teleop.py  sim_validation_demo.py
prompts/: system.md
scripts/: download_emotions.py  setup_pi.sh  test_hardware.py
specs/: 01-overview.md  02-robot-control.md  03-voice.md  04-motion.md  05-memory.md  06-permissions.md  07-project-structure.md  08-agent-loop.md  09-personality.md  10-observability.md  11-simulation.md
tests/: __init__.py  conftest.py  test_agent.py  test_integration.py  test_mcp.py  test_memory.py  test_motion.py  test_permissions.py  test_robot.py  test_simulation.py  test_utils.py  test_validation_suite.py  test_voice.py
(+86 files in other folders)
